--- a/lib/templates/youtube.erb
+++ b/lib/templates/youtube.erb
@@ -1,7 +1,7 @@
 <figure class="video-container" id="<%= id %>">
   <iframe src="https://www.youtube.com/embed/<%= embed_id %>" frameborder="0" allowfullscreen></iframe>
 
-  <% if caption.to_s.empty? %>
+  <% unless caption.to_s.empty? %>
     <figcaption class="caption video-caption video-caption-youtube">
       <%# TODO render_markdown %>
       <%= caption %>
