--- a/lib/templates/dailymotion.erb
+++ b/lib/templates/dailymotion.erb
@@ -3,8 +3,7 @@
 
   <% unless caption.to_s.empty? %>
     <figcaption class="caption video-caption video-caption-vimeo">
-      <%# TODO render_markdown %>
-      <%= caption %>
+      <%= MarkdownMedia.render_markdown caption %>
     </figcaption>
   <% end %>
 </figure>
