Add support for class:portrait to [[]] syntax

--- a/lib/templates/audio.erb
+++ b/lib/templates/audio.erb
@@ -1,4 +1,4 @@
-<figure id="<%= id %>">
+<figure id="<%= id %>" class="<%= klass %>">
   <audio controls>
     <source src="<%= embed_id %>" />
   </audio>
