--- a/lib/templates/dailymotion.erb
+++ b/lib/templates/dailymotion.erb
@@ -1,4 +1,4 @@
-<figure class="video-container" id="<%= id %>">
+<figure class="video-container <%= klass %>" id="<%= id %>">
   <iframe frameborder="0" src="//www.dailymotion.com/embed/video/<%= embed_id %>" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
 
   <% unless caption.to_s.empty? %>
