--- a/lib/templates/twitter.erb
+++ b/lib/templates/twitter.erb
@@ -1,4 +1,4 @@
-<blockquote class="twitter-tweet" data-lang="en" id="<%= id %>">
+<blockquote class="twitter-tweet <%= klass %>" data-lang="en" id="<%= id %>">
   <a href="<%= embed_id.to_s %>"><%= embed_id.to_s %></a>
 </blockquote>
 <script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
