--- a/lib/templates/video.erb
+++ b/lib/templates/video.erb
@@ -1,4 +1,4 @@
-<figure class="video-container" id="<%= id %>">
+<figure class="video-container <%= klass %>" id="<%= id %>">
   <video controls>
     <source src="<%= embed_id %>" />
   </video>
