--- a/lib/templates/youtube.erb
+++ b/lib/templates/youtube.erb
@@ -1,4 +1,4 @@
-<figure class="video-container" id="<%= id %>">
+<figure class="video-container <%= klass %>" id="<%= id %>">
   <iframe src="https://www.youtube.com/embed/<%= embed_id %>" frameborder="0" allowfullscreen></iframe>
 
   <% unless caption.to_s.empty? %>
