Fix images with no caption.
Fixes crimethinc/website#396

--- a/lib/templates/image.erb
+++ b/lib/templates/image.erb
@@ -4,7 +4,7 @@
     <% if link.to_s.empty? %>
       <img src="<%= embed_id %>" />
     <% else %>
-      <a href="<%= link %>"><img src=<%= embed_id %> /></a>
+      <a href="<%= link %>"><img src="<%= embed_id %>" /></a>
     <% end %>
   </figure>
 
