--- a/lib/templates/giphy.erb
+++ b/lib/templates/giphy.erb
@@ -1,6 +1,6 @@
 <figure class="video-container <%= klass %>" id="<%= id %>">
   <div style="width:100%;height:0;padding-bottom:56%;position:relative;">
-    <iframe src="https://giphy.com/embed/<%= embed_id %>" width="100%" height="100%" style="position:absolute" frameborder="0" class="giphy-embed" webkitallowfullscreen mozallowfullscreen allowFullScreen></iframe>
+    <iframe src="https://giphy.com/embed/<%= embed_id %>" width="100%" height="100%" frameborder="0" class="giphy-embed" webkitallowfullscreen mozallowfullscreen allowFullScreen></iframe>
   </div>
 
   <% unless caption.to_s.empty? %>
