dailymotion: set the right class css class for figcaption

--- a/lib/templates/dailymotion.erb
+++ b/lib/templates/dailymotion.erb
@@ -2,7 +2,7 @@
   <iframe frameborder="0" src="//www.dailymotion.com/embed/video/<%= embed_id %>" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
 
   <% unless caption.to_s.empty? %>
-    <figcaption class="caption video-caption video-caption-vimeo">
+    <figcaption class="caption video-caption video-caption-dailymotion">
       <%= MarkdownMedia.render_markdown caption %>
     </figcaption>
   <% end %>
